Invalidate labels LiveNodeList when input type changes

When the type of an HTMLInputElement changes, the labels LiveNodeList
inconsistently gets invalidated (depending whether the shadow subtree of
the input element changes). This CL forces an invalidation in UpdateType so
that the cache consistently gets invalidated.

Bug: 795910
Change-Id: Ice58060e06150f58b4fb5c8771a413091446ff62